fix: stabilize devlog return scroll restoration timing

--- a/devlog.html
+++ b/devlog.html
@@ -186,7 +186,7 @@
   <!-- コンテンツオーバーレイ -->
   <div id="content-overlay">
     <main class="container py-5 devlog-shell">
-      <a class="back-link mb-4" href="index.html#devlog-gallery-section">← 一覧に戻る</a>
+      <a class="back-link mb-4" href="index.html">← 一覧に戻る</a>
 
       <div class="mb-4">
         <div class="devlog-meta mb-2" id="devlog-meta"></div>
