--- a/devlog.html
+++ b/devlog.html
@@ -230,6 +230,7 @@
     const sessionId = params.get('id');
     const lang = params.get('lang') || document.documentElement.lang || 'ja';
     const DEVLOG_RETURN_INTENT_KEY = 'kesson.devlog.return-intent.v1';
+    const SCROLL_RESTORATION_ONCE_KEY = 'kesson.scroll-restoration-once.v1';
 
     const titleEl = document.getElementById('devlog-title');
     const metaEl = document.getElementById('devlog-meta');
@@ -241,6 +242,10 @@
     if (backLinkEl) {
       backLinkEl.addEventListener('click', () => {
         try {
+          sessionStorage.setItem(
+            SCROLL_RESTORATION_ONCE_KEY,
+            JSON.stringify({ armedAt: Date.now(), source: 'devlog-back-link' })
+          );
           sessionStorage.setItem(
             DEVLOG_RETURN_INTENT_KEY,
             JSON.stringify({ requestedAt: Date.now(), sessionId })
