fix: enforce top-start scroll lifecycle via coordinator (#47)

--- a/index.html
+++ b/index.html
@@ -9,33 +9,9 @@
     gtag('js', new Date());
     gtag('config', 'G-X5WQCB3JYT');
   </script>
-  <!-- Default: preserve native back/forward restoration.
-       One-shot manual mode is armed by scroll-coordinator before navigation. -->
-  <script>
-    (function () {
-      if (!('scrollRestoration' in history)) return;
-
-      var SCROLL_ONCE_KEY = 'kesson.scroll-restoration-once.v1';
-      var shouldUseManual = false;
-
-      try {
-        var armedPayload = window.sessionStorage.getItem(SCROLL_ONCE_KEY);
-        shouldUseManual = Boolean(armedPayload);
-        if (shouldUseManual) {
-          window.sessionStorage.removeItem(SCROLL_ONCE_KEY);
-        }
-      } catch (error) {
-        shouldUseManual = false;
-      }
-
-      history.scrollRestoration = shouldUseManual ? 'manual' : 'auto';
-
-      if (shouldUseManual) {
-        window.addEventListener('pageshow', function () {
-          history.scrollRestoration = 'auto';
-        }, { once: true });
-      }
-    })();
+  <script type="module">
+    import { initScrollCoordinator } from './src/scroll-coordinator.js';
+    initScrollCoordinator();
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
