feat: make ARTICLES heading open offcanvas

--- a/index.html
+++ b/index.html
@@ -121,7 +121,17 @@
   <section id="articles-section">
     <div class="section-content-wrap">
       <div class="container">
-        <h2 class="section-heading">ARTICLES</h2>
+        <h2 class="section-heading">
+          <button
+            type="button"
+            class="section-heading-link"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#articlesOffcanvas"
+            aria-controls="articlesOffcanvas"
+            aria-label="ARTICLES を開く">
+            ARTICLES
+          </button>
+        </h2>
         <div id="articles-error" class="d-none"></div>
         <div id="articles-grid" class="row g-3"></div>
       </div>
