feat: add direct section link next to ARTICLES heading

--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
             aria-label="ARTICLES を開く">
             ARTICLES
           </button>
+          <a
+            href="#articles-section"
+            class="section-heading-jump-link"
+            aria-label="ARTICLES セクションへのリンク（Offcanvasは開かない）">
+            #
+          </a>
         </h2>
         <div id="articles-error" class="d-none"></div>
         <div id="articles-grid" class="row g-3"></div>
