feat: add tech stack footer at bottom-right

--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
     </div>
   </section>
 
+  <!-- Tech Stack Footer -->
+  <footer id="tech-footer">
+    <div class="tech-footer-line">GitHub Pages</div>
+    <div class="tech-footer-line">Vanilla JS · ES Modules</div>
+    <div class="tech-footer-line">Three.js · Bootstrap</div>
+  </footer>
+
   <!-- Bootstrap Offcanvas（右からスライドイン） -->
   <div class="offcanvas offcanvas-end offcanvas-kesson"
        tabindex="-1"
