fix: sanitize innerHTML with DOMPurify (Fix #37)

--- a/devlog.html
+++ b/devlog.html
@@ -171,7 +171,8 @@
       "imports": {
         "three": "./vendor/three@0.160.0/build/three.module.js",
         "three/addons/": "./vendor/three@0.160.0/examples/jsm/",
-        "marked": "https://cdn.jsdelivr.net/npm/marked@15.0.7/lib/marked.esm.js"
+        "marked": "https://cdn.jsdelivr.net/npm/marked@15.0.7/lib/marked.esm.js",
+        "dompurify": "https://cdn.jsdelivr.net/npm/dompurify@3.2.4/dist/purify.es.mjs"
       }
     }
   </script>
@@ -217,6 +218,7 @@
   <!-- Devlogコンテンツローダー -->
   <script type="module">
     import { marked } from 'marked';
+    import DOMPurify from 'dompurify';
 
     marked.setOptions({
       breaks: true,
@@ -319,7 +321,7 @@
         }
 
         const rawContent = await loadSessionContent(session.id);
-        contentEl.innerHTML = rawContent ? marked.parse(rawContent) : '';
+        contentEl.innerHTML = rawContent ? DOMPurify.sanitize(marked.parse(rawContent)) : '';
       } catch (e) {
         console.warn('[devlog] Failed to load sessions.json:', e);
         showError('セッションデータの読み込みに失敗しました。');
