--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       "imports": {
         "three": "./vendor/three@0.160.0/build/three.module.js",
         "three/addons/": "./vendor/three@0.160.0/examples/jsm/",
-        "marked": "https://cdn.jsdelivr.net/npm/marked@15.0.7/lib/marked.esm.js"
+        "marked": "https://cdn.jsdelivr.net/npm/marked@15.0.7/lib/marked.esm.js",
+        "dompurify": "https://cdn.jsdelivr.net/npm/dompurify@3.2.4/dist/purify.es.mjs"
       }
     }
   </script>
