feat: add transparent top menu and improve devlog opening

--- a/index.html
+++ b/index.html
@@ -49,6 +49,46 @@
 <body>
   <div id="canvas-container" aria-hidden="true"></div>
 
+  <!-- Top menu bar (Bootstrap navbar) -->
+  <header id="kesson-topbar" class="navbar navbar-expand-md navbar-dark" aria-label="Main menu">
+    <div class="container-fluid px-3 px-md-4">
+      <a class="navbar-brand topbar-brand" href="#">Kesson Space</a>
+      <button class="navbar-toggler topbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#kessonTopbarNav"
+              aria-controls="kessonTopbarNav"
+              aria-expanded="false"
+              aria-label="Toggle menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="kessonTopbarNav">
+        <ul class="navbar-nav align-items-md-center gap-md-1">
+          <li class="nav-item">
+            <a class="nav-link topbar-link" href="#">HOME</a>
+          </li>
+          <li class="nav-item">
+            <button type="button"
+                    class="nav-link topbar-link topbar-link-btn"
+                    data-bs-toggle="offcanvas"
+                    data-bs-target="#articlesOffcanvas"
+                    aria-controls="articlesOffcanvas">
+              ARTICLES
+            </button>
+          </li>
+          <li class="nav-item">
+            <button type="button"
+                    id="topbar-devlog-btn"
+                    class="nav-link topbar-link topbar-link-btn"
+                    aria-controls="devlogOffcanvas">
+              DEVLOG
+            </button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+
   <!-- 左上クレジット -->
   <div id="credit">
     <div class="credit-line" id="credit-collab">AIとの協働で探索中</div>
