--- a/index.html
+++ b/index.html
@@ -52,7 +52,17 @@
   <!-- Top menu bar (Bootstrap navbar) -->
   <header id="kesson-topbar" class="navbar navbar-expand-md navbar-dark" aria-label="Main menu">
     <div class="container-fluid px-3 px-md-4">
-      <a class="navbar-brand topbar-brand" href="#">Kesson Space</a>
+      <div class="topbar-brand-wrap">
+        <a id="topbar-main-title"
+           class="navbar-brand topbar-main-title"
+           href="https://uminomae.github.io/pjdhiro/thinking-kesson/"
+           target="_blank"
+           rel="noopener">
+          欠損駆動思考
+        </a>
+        <span id="topbar-subtitle" class="topbar-subtitle">Kesson Space</span>
+        <span class="topbar-meta topbar-meta--author" id="credit-signature">Project Designer: pjdhiro</span>
+      </div>
       <button class="navbar-toggler topbar-toggler"
               type="button"
               data-bs-toggle="collapse"
@@ -84,27 +94,27 @@
               DEVLOG
             </button>
           </li>
+          <li class="nav-item topbar-lang-item">
+            <button type="button"
+                    id="lang-toggle"
+                    class="nav-link topbar-link topbar-link-btn topbar-lang-btn"
+                    aria-label="言語を英語に切り替え">
+              English
+            </button>
+          </li>
+          <li class="nav-item topbar-collab-item">
+            <span id="credit-collab" class="topbar-collab-note">AIとの協働で探索中</span>
+          </li>
         </ul>
       </div>
     </div>
   </header>
-
-  <!-- 左上クレジット -->
-  <div id="credit">
-    <div class="credit-line" id="credit-collab">AIとの協働で探索中</div>
-    <div class="credit-signature" id="credit-signature">Project Designer — pjdhiro</div>
-  </div>
   
   <div id="overlay">
     <div id="taglines"></div>
-
-    <a href="https://uminomae.github.io/pjdhiro/thinking-kesson/" target="_blank" rel="noopener">
-      <h1 id="title-h1">欠損駆動思考</h1>
-    </a>
-    <p class="subtitle" id="title-sub">Kesson Space</p>
   </div>
 
-  <!-- 右上: 操作ガイド（lang-toggle の下に配置） -->
+  <!-- 右上: 操作ガイド -->
   <div id="control-guide">
     <!-- デスクトップ版 -->
     <div class="guide-row guide-desktop">
@@ -117,11 +127,6 @@
       <span class="guide-sep">—</span>
       <span class="guide-action" data-ja="ズーム" data-en="zoom">zoom</span>
     </div>
-    <div class="guide-row guide-desktop">
-      <span class="guide-key" data-ja="スクロール" data-en="scroll">scroll</span>
-      <span class="guide-sep">—</span>
-      <span class="guide-action" data-ja="潜水" data-en="dive">dive</span>
-    </div>
     <!-- モバイル版 -->
     <div class="guide-row guide-touch">
       <span class="guide-key" data-ja="横スワイプ" data-en="swipe">swipe</span>
@@ -132,11 +137,6 @@
       <span class="guide-key" data-ja="ピンチ" data-en="pinch">pinch</span>
       <span class="guide-sep">—</span>
       <span class="guide-action" data-ja="ズーム" data-en="zoom">zoom</span>
-    </div>
-    <div class="guide-row guide-touch">
-      <span class="guide-key" data-ja="縦スクロール" data-en="scroll">scroll</span>
-      <span class="guide-sep">—</span>
-      <span class="guide-action" data-ja="潜水" data-en="dive">dive</span>
     </div>
   </div>
 
