--- a/devlog.html
+++ b/devlog.html
@@ -78,8 +78,10 @@
     }
     .devlog-cover {
       width: 100%;
-      max-height: 60vh;
-      object-fit: cover;
+      height: auto;
+      max-height: none;
+      object-fit: contain;
+      object-position: center center;
       border-radius: 6px;
       box-shadow: 0 10px 28px rgba(10, 14, 26, 0.6);
     }
