refactor(html): add scroll-coordinator rationale comment, clean up index.html (Phase A-4)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     gtag('js', new Date());
     gtag('config', 'G-X5WQCB3JYT');
   </script>
+  <!-- KEEP INLINE: scroll-coordinator must run before heavy module imports in main.js
+       to set history.scrollRestoration='manual' early enough to prevent scroll flash -->
   <script type="module">
     import { initScrollCoordinator } from './src/scroll-coordinator.js';
     initScrollCoordinator();
@@ -27,9 +29,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;400&display=swap" rel="stylesheet">
 
-  <!-- DISABLED: modulepreload — import mapとの競合問題で一時無効化 (Issue #4) -->
-
-  
   <script type="importmap">
     {
       "imports": {
@@ -110,7 +109,7 @@
     </div>
   </header>
   
-  <div id="overlay">
+  <div id="overlay" role="presentation">
     <div id="taglines"></div>
   </div>
 
@@ -158,7 +157,6 @@
   <div id="articles-spacer"></div>
 
   <!-- Articles Section -->
-  <!-- CHANGED(2026-02-16): inline style → CSS class (T-018) -->
   <section id="articles-section">
     <div class="section-content-wrap">
       <div class="container">
@@ -187,7 +185,6 @@
 
   <!-- Devlog Gallery Section（テキストログ削除、すぐギャラリー） -->
   <section id="devlog-gallery-section">
-    <!-- CHANGED(2026-02-16): inline style → CSS class (T-018) -->
     <div class="section-content-wrap">
       <div class="container">
         <h2 class="section-heading">DEVLOG</h2>
@@ -276,7 +273,6 @@
     </div>
   </div>
 
-  <!-- CHANGED: aria-label 追加 -->
   <button id="surface-btn" aria-label="ページ上部に戻る">↑ surface</button>
 
   <script type="module" src="./src/pages/e2e-auto-run.js"></script>
