--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="topbar-brand-wrap">
         <a id="topbar-main-title"
            class="navbar-brand topbar-main-title"
-           href="https://uminomae.github.io/kesson-space/">
+           href="./">
           欠損駆動思考
         </a>
       </div>
@@ -70,7 +70,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="kessonTopbarNav">
         <ul class="navbar-nav align-items-md-center gap-md-1">
           <li class="nav-item">
-            <a class="nav-link topbar-link" href="https://uminomae.github.io/creation-space/">Creation</a>
+            <a class="nav-link topbar-link" href="../creation-space/">Creation</a>
           </li>
           <li class="nav-item">
             <button type="button"
