feat: add right-side creation-space backlink

--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
     <span>scroll</span>
   </div>
 
+  <!-- creation-space導線（右中央固定） -->
+  <a id="right-creation-link" href="/creation-space/" aria-label="creation-spaceへ移動">
+    <span id="right-creation-link-label">創造とは</span>
+    <span class="arrow" aria-hidden="true">▸</span>
+  </a>
+
   <!-- 潜水スペーサー（カメラ下降のスクロール余白） -->
   <div id="hero-spacer"></div>
   <!-- Articles出現タイミング調整スペーサー -->
