feat: integrate creation cards section from prototype

--- a/index.html
+++ b/index.html
@@ -176,6 +176,19 @@
     </div>
   </section>
 
+  <!-- Creation Cards Section -->
+  <section id="creation-cards-section">
+    <div class="section-content-wrap">
+      <div class="container">
+        <h2 class="section-heading">
+          <span id="creation-cards-heading">CREATION CARDS</span>
+        </h2>
+        <div id="creation-cards-error" class="d-none"></div>
+        <div id="creation-cards-grid" class="row g-3"></div>
+      </div>
+    </div>
+  </section>
+
   <!-- Devlog Gallery Section（テキストログ削除、すぐギャラリー） -->
   <section id="devlog-gallery-section">
     <div class="section-content-wrap">
