feat(ui): update Three.js section heading, simplify cards, and unify side-link style

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <!-- creation-space導線（右中央固定） -->
   <a id="right-creation-link" href="/creation-space/" aria-label="creation-spaceへ移動">
     <span id="right-creation-link-label">創造とは</span>
-    <span class="arrow" aria-hidden="true">▸</span>
+    <div class="arrow">▾</div>
   </a>
 
   <!-- 潜水スペーサー（カメラ下降のスクロール余白） -->
@@ -181,7 +181,7 @@
     <div class="section-content-wrap">
       <div class="container">
         <h2 class="section-heading">
-          <span id="creation-cards-heading">CREATION CARDS</span>
+          <span id="creation-cards-heading">Three.js</span>
         </h2>
         <div id="creation-cards-error" class="d-none"></div>
         <div id="creation-cards-grid" class="row g-3"></div>
