--- a/creation/consciousness-structure.html
+++ b/creation/consciousness-structure.html
@@ -96,6 +96,7 @@
 
     .glass-card {
       pointer-events: auto; /* Re-enable for the card content */
+      /* Card style: サイト全体で統一すること (Synchronized with ARTICLES on main page) */
       background: rgba(20, 25, 40, 0.9);
       backdrop-filter: none;
       -webkit-backdrop-filter: none;
