feat(threejs): simplify URLs, rename files, and implement 'Read More' functionality

--- a/threejs/01consciousness.html
+++ b/threejs/01consciousness.html
@@ -365,9 +365,7 @@
           </div>
 
           <footer class="mt-5 pt-4 border-top border-secondary border-opacity-10 text-center text-lg-start">
-            <a href="../" class="btn-kesson text-uppercase">
-              ← Return to Space
-            </a>
+            <!-- Return link removed as per user request -->
           </footer>
         </article>
 
