--- a/index.html
+++ b/index.html
@@ -148,9 +148,10 @@
   </div>
 
   <!-- creation-space導線（右中央固定） -->
+  <!-- creation-space導線（右中央固定） -->
   <a id="right-creation-link" href="/creation-space/" aria-label="creation-spaceへ移動">
     <span id="right-creation-link-label">創造とは</span>
-    <span class="arrow" aria-hidden="true">▸</span>
+    <div class="arrow">▾</div>
   </a>
 
   <!-- 潜水スペーサー（カメラ下降のスクロール余白） -->
@@ -181,7 +182,7 @@
     <div class="section-content-wrap">
       <div class="container">
         <h2 class="section-heading">
-          <span id="creation-cards-heading">CREATION CARDS</span>
+          <span id="creation-cards-heading">Three.js</span>
         </h2>
         <div id="creation-cards-error" class="d-none"></div>
         <div id="creation-cards-grid" class="row g-3"></div>
@@ -266,6 +267,23 @@
         <button type="button" class="articles-filter-btn" data-type="post" aria-pressed="false">Post</button>
       </div>
       <div id="offcanvas-articles-grid" class="row g-3"></div>
+    </div>
+  </div>
+
+  <!-- Three.js Offcanvas -->
+  <div class="offcanvas offcanvas-end offcanvas-kesson"
+       tabindex="-1"
+       id="creationOffcanvas"
+       data-bs-backdrop="true">
+    <div class="offcanvas-header border-bottom border-secondary">
+      <div>
+        <h5 class="text-light mb-0 offcanvas-title-spaced text-uppercase">Three.js</h5>
+      </div>
+      <button type="button" class="btn-close btn-close-white"
+              data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body p-3">
+      <div id="offcanvas-creation-grid" class="row g-3"></div>
     </div>
   </div>
 
