fix(ui): harden threejs cards link and read-more behavior

--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
   </div>
 
   <!-- creation-space導線（右中央固定） -->
-  <!-- creation-space導線（右中央固定） -->
   <a id="right-creation-link" href="/creation-space/" aria-label="creation-spaceへ移動">
     <span id="right-creation-link-label">創造とは</span>
-    <div class="arrow">▾</div>
+    <span class="arrow" aria-hidden="true">▾</span>
   </a>
 
   <!-- 潜水スペーサー（カメラ下降のスクロール余白） -->
