feat(ui): move collab note and auto-sort threejs cards

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
            href="./">
           欠損駆動思考
         </a>
+        <span id="credit-collab" class="topbar-collab-note topbar-collab-note--brand">AIとの協働で探索中</span>
       </div>
       <button class="navbar-toggler topbar-toggler"
               type="button"
@@ -96,9 +97,6 @@
                     aria-label="言語を英語に切り替え">
               English
             </button>
-          </li>
-          <li class="nav-item topbar-collab-item">
-            <span id="credit-collab" class="topbar-collab-note">AIとの協働で探索中</span>
           </li>
         </ul>
       </div>
